# minesweeper

./: Cargo.toml  README.md  build_wasm.nu
.github/workflows/: pages.yml  release.yml
src/: assets.rs  colors.rs  game.rs  game_over_plugin.rs  helpers.rs  lib.rs  main.rs  minesweeper_plugin.rs  popup.rs  states.rs
www/: .gitignore  index.html
